# musik_box

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Pipfile  README.md  main.cpp  main.py
config/: config.json
lib/: CMakeLists.txt  setup.py
lib/app/: config.py
lib/audio/: CMakeLists.txt  audio_base.h  mp3.h  musik_box_wrapper.cpp  wav.h
lib/audio/audio/: audio_base.h  mp3.h  wav.h
lib/audio/src/: audio_base.h  mp3.h  wav.h
lib/audio/src/audio/: mp3.h  wav.h
lib/audio/test/: test_wav.cpp
lib/dsp/: fft.h
lib/musik_box/audio/: CMakeLists.txt  musik_box_wrapper.cpp
lib/musik_box/audio/src/audio/: audio_base.h  wav.h
lib/musik_box/audio/test/: CMakeLists.txt
lib/tool/: gnu_plot.h
test/: CMakeLists.txt  load_audio.py  test_fft.cpp  test_fftw.cpp  test_wav.cpp
